--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vee-validate": "^2.2.3",
     "vue": "^2.6.10",
     "vue-i18n": "^8.10.0",
+    "vue-meta": "^1.6.0",
     "vue-router": "^3.0.6",
     "vuex": "^3.1.0"
   },
