--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-i18n": "^8.10.0",
     "vue-meta": "^1.6.0",
     "vue-router": "^3.0.6",
+    "vuejs-logger": "^1.5.3",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
